--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.0
+  firebase_auth: ^4.15.0
+  cloud_firestore: ^4.13.4
+  firebase_storage: ^11.5.6
+  path_provider: ^2.1.1
+  image_picker: ^1.0.5
+  flutter_riverpod: ^2.4.10
 
 dev_dependencies:
   flutter_test:
