--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_chat_ui: ^1.6.12
   file_picker: ^6.1.1
   open_filex: ^4.4.0
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
