--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   file_picker: ^6.1.1
   open_filex: ^4.4.0
   smooth_page_indicator: ^1.1.0
+  matrix_gesture_detector: ^0.2.0-nullsafety.1
 
 dev_dependencies:
   flutter_test:
